--- a/documents/01.md
+++ b/documents/01.md
@@ -1,3 +1,49 @@
+# 프로젝트 개요
+소셜 네트워크 서비스 서비스
+
+## 필요한 API
+### 사용자 지표 획득 API 설계
+
+#### 1. API 개요
+- **기능**: 특정 사용자 ID와 페이지 번호를 기반으로 사용자 지표 데이터를 조회합니다.
+
+#### 2. 요청(Request)
+- **HTTP Method**: `GET`
+- **Endpoint**: `/api/v1/users/action-histories`
+
+#### 요청 파라미터
+| 이름       | 타입     | 필수 여부 | 설명                  |
+|------------|----------|-----------|-----------------------|
+| `userId`   | `String` | 필수      | 사용자 ID             |
+| `page`     | `int`    | 선택      | 페이지 번호 (기본값 1)|
+
+#### 요청 예시
+GET /api/v1/users/123/action-histories&page=1
+
+#### 요청 응답
+```json
+{
+  "userId": "123",
+  "actionHistories": [
+    {
+      "action": "posts",
+      "targetUserId": 123
+    },
+    {
+      "action": "following",
+      "targetUserId": 450
+    },
+    {
+      "action": "likesPosts",
+      "targetUserId": 720
+    }
+  ],
+  "page": 1,
+  "isEnd": false,
+}
+
+
+
 1. 필요한 api
 2. 데이터 저장 테이블 및 전략
 3. 아키텍처
