--- a/documents/01.md
+++ b/documents/01.md
@@ -1,49 +1,73 @@
 # 프로젝트 개요
 소셜 네트워크 서비스 서비스
 
-## 필요한 API
-### 사용자 지표 획득 API 설계
+## API 연동 및 데이터 획득
 
-#### 1. API 개요
-- **기능**: 특정 사용자 ID와 페이지 번호를 기반으로 사용자 지표 데이터를 조회합니다.
+### 사용자 조회
+- **기능**: 특정 사용자 ID를 기반으로 전반적인 정보 조회를 합니다.
 
 #### 2. 요청(Request)
 - **HTTP Method**: `GET`
-- **Endpoint**: `/api/v1/users/action-histories`
+- **Endpoint**: `/api/v1/users/`
 
 #### 요청 파라미터
-| 이름       | 타입     | 필수 여부 | 설명                  |
-|------------|----------|-----------|-----------------------|
-| `userId`   | `String` | 필수      | 사용자 ID             |
-| `page`     | `int`    | 선택      | 페이지 번호 (기본값 1)|
+userId: String
 
 #### 요청 예시
-GET /api/v1/users/123/action-histories&page=1
+GET /api/v1/users/123/
 
 #### 요청 응답
 ```json
 {
   "userId": "123",
-  "actionHistories": [
+  "postCount": 456,
+  "follwers": 7203,
+  "follwings": 1,
+  "likes": 6885
+}
+```
+
+### 사용자 활동 데이터 조회
+- **기능**: 특정 사용자 ID를 기반으로 페이징 처리 하여 사용자 활동 데이터 조회
+
+#### 2. 요청(Request)
+- **HTTP Method**: `GET`
+- **Endpoint**: `/api/v1/users/123/actions`
+
+#### 요청 파라미터
+userId: String
+page: Int
+
+#### 요청 예시
+GET /api/v1/users/123/actions&page=1
+
+#### 요청 응답
+```json
+```json
+{
+  "userId": "123",
+  "actions": [
     {
-      "action": "posts",
-      "targetUserId": 123
+      "action": "POST_LIKE",
+      "userId": "768" 
     },
     {
-      "action": "following",
-      "targetUserId": 450
+      "action": "USER_FOLLOW",
+      "userId": "1523" 
     },
     {
-      "action": "likesPosts",
-      "targetUserId": 720
-    }
+      "action": "USER_FOLLOWING",
+      "userId": "12111" 
+    },
   ],
   "page": 1,
-  "isEnd": false,
+  "isEnd": false
 }
+```
 
+## 데이터 표현 및 저장 전략
 
-
-1. 필요한 api
-2. 데이터 저장 테이블 및 전략
-3. 아키텍처
+### 데이터 저장
+- Redis -> Mysql로 저장하여 실시간 조회는 모두 Redis로 진행
+- Redis와 Database에 write 하도록 하고, history 와 관련된 데이터틑 큐를 이용하여 저장
+- Redis 저장 후 Database write는 이벤트 발행이나 큐를 사용 하도록 함
